# bussdcc-framework

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
src/bussdcc_framework/: __init__.py  json.py  metadata.py  version.py  web.py
src/bussdcc_framework/codec/: __init__.py  base.py  dump.py  load.py
src/bussdcc_framework/events/: __init__.py  framework.py  sink.py
src/bussdcc_framework/interface/web/: __init__.py  base.py  context.py  factory.py  interface.py  plugin.py  plugins.py  protocol.py
src/bussdcc_framework/interface/web/bootstrap/: plugin.py
src/bussdcc_framework/interface/web/bootstrap/templates/bussdcc_framework/bootstrap/: _messages.html  layout.html
src/bussdcc_framework/interface/web/bootstrap_layout/: plugin.py
src/bussdcc_framework/interface/web/bootstrap_layout/templates/bussdcc_framework/bootstrap_layout/: base.html
src/bussdcc_framework/interface/web/chartjs/: plugin.py
src/bussdcc_framework/interface/web/chartjs/templates/bussdcc_framework/chartjs/: _chartjs.html
src/bussdcc_framework/interface/web/client/: plugin.py
src/bussdcc_framework/interface/web/client/static/: client.js
src/bussdcc_framework/interface/web/client/templates/bussdcc_framework/client/: _client.html
src/bussdcc_framework/interface/web/formtree/: __init__.py  build.py  form.py  plugin.py  protocol.py  types.py  unflatten.py  validate.py
src/bussdcc_framework/interface/web/formtree/static/: formtree.js
src/bussdcc_framework/interface/web/formtree/templates/bussdcc_framework/formtree/: _formtree.jinja
src/bussdcc_framework/interface/web/formtree/templates/formtree/: _formtree.jinja
src/bussdcc_framework/interface/web/socketio/: plugin.py
src/bussdcc_framework/interface/web/socketio/templates/bussdcc_framework/socketio/: _socketio.html
src/bussdcc_framework/interface/web/sqlalchemy/: __init__.py  plugin.py
src/bussdcc_framework/interface/web/templates/: home.html
src/bussdcc_framework/io/: __init__.py
src/bussdcc_framework/io/console/: __init__.py  sink.py
src/bussdcc_framework/io/jsonl/: __init__.py  sink.py  source.py
src/bussdcc_framework/message/: __init__.py  framework.py  sink.py  system.py  web.py
src/bussdcc_framework/process/: __init__.py  system_identity.py
src/bussdcc_framework/runtime/: __init__.py  base.py  replay.py  runtime.py  signal.py
src/bussdcc_framework/runtime/sink/: console.py  jsonl.py  protocol.py
src/bussdcc_framework/service/: __init__.py  system_identity.py
src/bussdcc_framework/util/: __init__.py  dataclass.py
