[project]
name = "bussdcc-framework"
dynamic = [
    "version",
]
dependencies = [
    "bussdcc==0.32.0",
    "flask>=3.1",
    "flask-socketio>=5.6",
    "bootstrap-flask==2.5.0",
]
description = "bussdcc-framework"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Joshua B. Bussdieker", email = "jbussdieker@gmail.com" },
]
maintainers = [
    { name = "Joshua B. Bussdieker", email = "jbussdieker@gmail.com" },
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Typing :: Typed",
]
keywords = [
    "framework",
]
license = "MIT"

[project.optional-dependencies]
dev = [
    "types-Flask-SocketIO",
]

[project.urls]
Homepage = "https://github.com/jbussdieker/bussdcc-framework"
Documentation = "https://github.com/jbussdieker/bussdcc-framework/blob/main/README.md"
Repository = "https://github.com/jbussdieker/bussdcc-framework"
Issues = "https://github.com/jbussdieker/bussdcc-framework/issues"
Changelog = "https://github.com/jbussdieker/bussdcc-framework/blob/main/CHANGELOG.md"

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
