[project]
name = "bussdcc-framework"
dynamic = [
    "version",
]
dependencies = [
    "bussdcc ~= 0.40.0",
    "flask ~= 3.1.3",
    "flask-socketio ~= 5.6.1",
]
description = "An opinionated runtime and tooling layer built on top of bussdcc."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Joshua B. Bussdieker", email = "jbussdieker@gmail.com" },
]
maintainers = [
    { name = "Joshua B. Bussdieker", email = "jbussdieker@gmail.com" },
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Typing :: Typed",
]
keywords = [
    "framework",
]
license = "MIT"

[project.entry-points."bussdcc_framework.web"]
bootstrap = "bussdcc_framework.interface.web.bootstrap.plugin:plugin"
client = "bussdcc_framework.interface.web.client.plugin:plugin"
formtree = "bussdcc_framework.interface.web.formtree.plugin:plugin"
sqlalchemy = "bussdcc_framework.interface.web.sqlalchemy.plugin:plugin"
socketio = "bussdcc_framework.interface.web.socketio.plugin:plugin"
chartjs = "bussdcc_framework.interface.web.chartjs.plugin:plugin"

[project.optional-dependencies]
sqlalchemy = [
    "flask-sqlalchemy ~= 3.1.1",
    "sqlalchemy ~= 2.0.48",
]
dev = ["types-Flask-SocketIO"]

[project.urls]
Homepage = "https://github.com/jbussdieker/bussdcc-framework"
Documentation = "https://github.com/jbussdieker/bussdcc-framework/blob/main/README.md"
Repository = "https://github.com/jbussdieker/bussdcc-framework"
Issues = "https://github.com/jbussdieker/bussdcc-framework/issues"
Changelog = "https://github.com/jbussdieker/bussdcc-framework/blob/main/CHANGELOG.md"

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
